@@ -1,3 +1,8 @@
+2007-07-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-themes.c: (theme_message_area_update), (themes_init):
+	cope with unset GConf keys, and group GConf notifications
+
 2007-07-29  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance-themes.c: (theme_message_area_response_cb),
